--- a/quiz.html
+++ b/quiz.html
@@ -16,17 +16,33 @@
     <header>
         <h1> Head in the Stars!</h1>
     </header>
-   
-    <main>
 
+    <main>
+        <h3>Are you ready?</h3>
+        <p> 1. Timer will start counting down when you press start!<br>
+            2. Each question answered wrong will take off 3 seconds!</p>
+        <br>
+
+        <button id="start" class="btn btn-primary">Start!</button>
+        <!-- Timer -->
+        <div id="timer"><span id="countdown">120</span> seconds</div>
+
+        <!-- Quiz questions and options-->
+        <div id='question' class=mb-3></div>
+        <div id="options" class="mb-3"> <input type="radio"></div>
+
+        <button type="submit" class="btn btn-primary" id="submitAnswer">submit</button>
+        <div id="points">Points:<span id="score">0</span></div>
+       
     </main>
 
+    <!-- Javascript files -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="./assets/script.js"></script>
+    <script src="./assets/quiz.js"></script>
 </body>
 
 </html>
