--- a/quiz.html
+++ b/quiz.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Astrology Quiz</title>
+    <title>Astrology Quiz initiated</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="/resources/demos/style.css">
+    <link rel="stylesheet2" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
@@ -18,9 +18,10 @@
     </header>
 
     <main>
-        <h3>Are you ready?</h3>
+        <h3>Instructions</h3>
         <p> 1. Timer will start counting down when you press start!<br>
-            2. Each question answered wrong will take off 3 seconds!</p>
+            2. Each question answered correctly will add 10 points! <br>
+            3. Each question answered incorrectly will take off 10 seconds of remaining time!</p>
         <br>
 
         <button id="start" class="btn btn-primary">Start!</button>
@@ -29,19 +30,22 @@
 
         <!-- Quiz questions and options-->
         <div id='question' class=mb-3></div>
-        <div id="options" class="mb-3"> <input type="radio"></div>
+        <div id="options" class="mb-3"></div>
 
-        <button type="submit" class="btn btn-primary" id="submitAnswer">submit</button>
+        <button type="submit" class="btn btn-primary" id="submitAnswer">submit answer</button>
         <div id="points">Points:<span id="score">0</span></div>
        
     </main>
 
+    <table id="scoresTable">
+        <!-- scores added here -->
+    </table>
+
+
+    <footer>
+        </footer>
+
     <!-- Javascript files -->
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
     <script src="./assets/quiz.js"></script>
 </body>
 
