--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     <main>
 
     </main>
-
+    <table id="scoresTable">
+        <!-- scores added here -->
+    </table>
     
     <script src="./assets/script.js"></script>
 </body>
 
 </html>
+
